tests/errors/invalid_uescape0.pyx
# mode: error

u'\u'

_ERRORS = '''
3:2: Invalid unicode escape '\u'
'''
